--- a/pyproject.yaml
+++ b/pyproject.yaml
@@ -17,6 +17,9 @@ authors = [
 ]
 readme = "README.md"
 
+[tool.setuptools]
+py-modules=["transporter_networks"]
+
 [tool.poetry.dependencies]
 python = "3.10.6"
 mujoco = "^2.3.0"
