add init networks

--- a/transporter_networks/config/place/resnet_43.yaml
+++ b/transporter_networks/config/place/resnet_43.yaml
@@ -1,6 +1,7 @@
 dim_output_features: 3
 
 query:
+  output_softmax: False
   input_projection:
     conv:
       _target_: flax.linen.Conv
@@ -282,6 +283,7 @@ query:
 
 
 key:
+  output_softmax: False
   input_projection:
   conv:
     _target_: flax.linen.Conv
