--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,7 @@ py-modules=["transporter_networks"]
 python = "3.10.6"
 numpy = "^1.16.0"
 pillow = "10.0.0"
-jax = "^0.4.14"
-jaxlib = "^0.4.14"
+jaxlib = {extras=["cuda12_pip"], url = "https://storage.googleapis.com/jax-releases/cuda12/jaxlib-0.4.23+cuda12.cudnn89-cp310-cp310-manylinux2014_x86_64.whl"}
 matplotlib = "^3.7.2"
 hydra-core = "^1.3.2"
 pytest = "^7.4.2"
